--- a/vignettes/predictionclass.Rmd
+++ b/vignettes/predictionclass.Rmd
@@ -80,13 +80,13 @@ models are listed as part of the `learner` class documentation
 ```{r, eval = FALSE}
 ?learner # help(learner)
 ```
-which contains essential information for the usage of the `learner` class
+which contains all essential information for the usage of the `learner` class
 objects. With the exception of `learner_sl`, all constructors require a
-`formula` argument that specify the response vector and design matrix of a
-learner. This way the construction of a learner is separated from the estimation
-of the underlying model, as shown in the above logistic regression example. A
+`formula` argument that specify the response vector and design matrix for the
+underlying model. This way the construction of a learner is separated from the
+estimation of the model, as shown in the above logistic regression example. A
 result of this design is the convenient specification of ensemble learners
-(superlearner), where individual learners operate on a different subset of
+(superlearner), where individual learners operate on different subsets of
 features.
 
 ```{r}
@@ -101,32 +101,173 @@ lr_sl$estimate(pbc, nfolds = 10)
 lr_sl
 ```
 
-## Details
-All constructors are essentially wrappers for the fit and predict functions of
-the underlying statistical or ML models, with minor modifications to standardize
-the output of the predict functions. For example, the fit function
-`grf::probability_forest` (generalized random forest) that is wrapped inside
-`learner_grf` requires a design matrix `X` and response vector `Y` as inputs.
+Most constructors have additional arguments that impact the resulting model fit,
+ranging from the specification of a link function for generalized linear models
+to hyper hyperparameters of machine learning models. Arguments naturally vary
+between the constructors and are documented for each function (e.g.
+`?learner_gam`). The implemented constructors only provide arguments for the
+most relevant parameters of the underlying fit function (`mgcv::gam` in case of
+`learner_gam`). As described in the documentation, the ellipsis argument (`...`)
+can be used to pass additional arguments to the fit function. However, in most
+situations this is rarely required.
 
-A key feature of the `learner` class is the internal construction of the design
-matrix and response vector from the specified `formula` argument.
-```{r}
-lr_grf <- learner_grf(y ~ age + log2(bili), model = "probability_forest")
-lr_grf$summary()$estimate
-```
-The during the fitting process constructed design matrix can be inspected via
-```{r}
-lr_grf$design(pbc)$x |> head()
-```
+TODO: here it would be nice to have a utility function to generate a list of
+learners from a parameter grid
 
 # Usage
 
-cross validation
+The basic usage is to construct a new learner by providing the `formula`
+argument and the set of additional parameters that control the model fitting
+process and the task (binary classification in this example).
+```{r}
+lr_xgboost <- learner_xgboost(
+  formula = y ~ age + sex + bili,
+  eta = 0.3, nrounds = 5,  # hyperparameters
+  objective = "binary:logistic" # learning task
+)
+lr_xgboost
+```
 
-updating
+The model is estimated via the `estimate` method
+```{r}
+lr_xgboost$estimate(data = pbc)
+```
+The default behavior is to assign the fitted model to the learner object, which
+can be accessed via
+```{r}
+class(lr_xgboost$fit)
+```
 
-specials
+Once the model has been fitted, predictions are generated with
+```{r}
+lr_xgboost$predict(head(pbc))
+```
+where the fitted model is used inside the learner object to generate the
+predictions.
 
-cloning
+S3 methods are implemented for the `learner` class objects as an alternative to
+the R6 class syntax for fitting the model and making predictions.
+```{r}
+lr <- learner_glm(y ~ age, family = "binomial")
+estimate(lr, pbc)
+predict(lr, head(pbc))
+```
+
+## Update formula
+
+The estimate and predict functions of `learner` class objects are by design
+immutable. Both functions can be inspected as part of the return values of the
+summary method
+```{r}
+lr_xgboost$summary()$estimate
+```
+
+Rare situations may arise where one wants to update the formula argument. This
+supported and implemented via the `update` method
+```{r}
+lr_xgboost$update(y ~ age + sex)
+```
+The design matrix that results from by the specified formula can be inspected
+via
+```{r}
+head(lr_xgboost$design(pbc)$x)
+```
+and the response vector via
+```{r}
+head(lr_xgboost$response(pbc))
+```
+See `?learner` for the differences between `learner$design` and
+`learner$response` and `?design` for more details about the construction of the
+design matrix and response vector.
+
+## Cross-validation
+
+The `{targeted}` package provides a generic implementation for repeated k-fold
+cross-validation with `learner` class objects. Parallelization is supported via
+the `{future}` and `{parallel}` packages (see `?cv` for more details).
+```{r}
+# future::plan("multicore")
+lrs <- list(
+  glm = learner_glm(y ~ age + age, family = "binomial"),
+  gam = learner_gam(y ~ s(age) + s(bili), family = "binomial")
+)
+ # 2 times repeated 5-fold cross-validation
+cv(lrs, data = pbc, rep = 2, nfolds = 5)
+```
+
+## Specials (advanced topic)
+
+TODO: example with offset
 
 # Defining new learners
+
+Statistical or machine learning models for which no constructors are provided
+can be implemented with a few lines of code. In what follows we cover three
+general cases where the input to the fit function differs.
+
+## Fit function with formula and data arguments
+
+The first general case covers fit functions which expect a formula and data
+argument. Both arguments are used then by the fitting routine to construct the
+design matrix and response vector. Statistical models are usually implement with
+such an interface, with examples including `stats::glm`, `mgcv::gam` and
+`earth::earth`. The `learner` R6 class supports these fitting routines by
+checking if the provided estimate function has a `formula` and `data` argument.
+If it does, then the `formula` and `data` argument are passed on to the estimate
+function without further modifications. This is exemplified in the following for
+`stats::glm`, where we define a new constructor to return a `learner` class
+object that fits a generalized model
+```{r}
+new_glm <- function(formula, ...) {
+  learner$new(
+    formula = formula,
+    estimate = stats::glm,
+    predict = stats::predict,
+    predict.args = list(type = "response"),
+    estimate.args = list(...),
+    info = "new glm learner" # optional
+  )
+}
+lr <- new_glm(y ~ age, family = "binomial")
+lr
+```
+It can be seen that the optional arguments of `new_glm` define the
+`estimate.args` of a constructed learner object. When estimating the model with
+```{r}
+lr$estimate(pbc)
+```
+the parameters defined in `estimate.args` are passed on with the `formula` and
+`data` to `stats::glm` (i.e. the function specified via the `estimate`
+argument). Thus, the above is equivalent to
+```{r}
+fit <- glm(y ~ age, family = "binomial", data = pbc)
+all(coef(fit) == coef(lr$fit))
+```
+The code further instructs to construct a learner object that uses
+`stats::predict` to make predictions. The learner object similarly passes on the
+`predict.args` to `stats::predict` for
+```{r}
+lr$predict(head(pbc))
+```
+which is equivalent to
+```{r}
+predict(fit, newdata = head(pbc), type = "response")
+```
+Indeed, the documentation of `?learner` reveals that the predict method always
+requires an `object` and `newdata` argument. An important implementation detail
+is that the `learner` R6 class allows to overrule the defined `estimate.args`
+and `predict.args` in the method calls.
+```{r}
+lr$estimate(pbc, family = "poisson")
+lr$predict(head(pbc), type = "link")
+```
+
+## Fit function with x and y arguments
+
+Many fitting routines for machine learning models expect a design matrix and
+response vector as inputs. The R6 `learner` class supports these fitting
+functions by internally processing the `formula` argument via the
+`targeted::design` function. 
+
+## Fit function with single data argument
+meta learner
