--- a/README.Rmd
+++ b/README.Rmd
@@ -19,20 +19,20 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-# Targeted Inference in R: targeted <a href="https://kkholst.github.io/targeted"><img src="man/figures/logo.svg" align="right" height="75" /></a>
-<!-- # Targeted Inference in R: targeted <a href="https://targetlib.org/r/"><img src="man/figures/logo.svg" align="right" height="75" /></a> -->
+# Targeted Learning in R: `targeted` <a href="https://kkholst.github.io/targeted"><img src="man/figures/logo.svg" align="right" height="75" /></a>
 
-Various methods for targeted and semiparametric inference including augmented
-inverse probability weighted (AIPW) estimators for missing data and causal
-inference (Bang and Robins (2005) <doi:10.1111/j.1541-0420.2005.00377.x>),
-variable importance and conditional average treatment effects (CATE) (van der
-Laan (2006) <doi:10.2202/1557-4679.1008>), estimators for risk differences and
-relative risks (Richardson et al. (2017) <doi:10.1080/01621459.2016.1192546>),
-assumption lean inference for generalized linear model parameters (Vansteelandt
-et al. (2022) <doi:10.1111/rssb.12504>).
+Various methods for targeted learning and semiparametric inference including
+augmented inverse probability weighted (AIPW) estimators for missing data and
+causal inference (Bang and Robins (2005)
+<doi:10.1111/j.1541-0420.2005.00377.x>), variable importance and conditional
+average treatment effects (CATE) (van der Laan (2006)
+<doi:10.2202/1557-4679.1008>), estimators for risk differences and relative
+risks (Richardson et al. (2017) <doi:10.1080/01621459.2016.1192546>), assumption
+lean inference for generalized linear model parameters (Vansteelandt et al.
+(2022) <doi:10.1111/rssb.12504>).
 
 
-## Installation
+# Installation
 
 You can install the released version of targeted from [CRAN](<https://CRAN.R-project.org>) with:
 
@@ -43,13 +43,48 @@ install.packages("targeted")
 And the development version from [GitHub](<https://github.com/kkholst/targeted>) with:
 
 ```{r  eval=FALSE }
-remotes::install_github("kkholst/targeted")
+remotes::install_github("kkholst/targeted", ref="dev")
 ```
 
-## Examples
+# Examples
+
+To illustrate some of the functionality of the `targeted` package we simulate
+some data from the following model
+$$Y = \cos(W_1) + A + W_2 A + 0.2 W_2^2 + \epsilon$$
+with independent measurement error $\epsilon\sim\mathcal{N}(0,1)$, and
+with treatment variable $A \sim Bernoulli(\operatorname{expit}\{-1+W_1\})$ and
+independent covariates $W_1, W_2\sim\mathcal{N}(0,1)$.
+```{r simdata}
+simdata <- function(n, ...) {
+   w1 <- rnorm(n) # covariates
+   w2 <- rnorm(n)
+   a <- rbinom(n, 1, plogis(-1 + w1)) # treatment
+   y <- cos(w1) + w2*a + 0.2*w2^2 + a + rnorm(n) # continuous response
+   data.frame(y, a, w1, w2)
+}
+d <- simdata(1000)
+
+head(d)
+```
+
+## Prediction models
+
+Methods for targeted and semiparametric inference rely on fitting nuisance
+models to observed data when estimating the target parameter of interest. The
+`{targeted}` package implements the [R6 reference class](https://r6.r-lib.org/)
+`learner` to harmonize common statistical and machine learning models for the
+usage as nuisance models across the various implemented estimators, such as the
+`targeted:cate` function. Commonly used models are constructed as `learner`
+class objects through the `learner_` functions.
 
 
-### Targeted risk regression
+
+##
+
+
+## Risk regression with binary exposure and nuisance model for the odds-product regression
+Estimating a relative risk or risk difference with a binary exposure
+
 
 ```{r  results='hide' }
 library(targeted)
@@ -116,3 +151,27 @@ Interactions with the exposure can be examined with the `target` argument
 ```{r   }
 riskreg(y ~ a, target=a~x, nuisance=~x+z, data=d, type="rr")
 ```
+
+
+
+# Project organization
+
+We use the `dev` branch for development and the `main` branch for stable
+releases, which currently follow a frequency of about 4 weeks. All
+releases follow [semantic versioning](https://semver.org/), are
+[tagged](https://github.com/kkholst/targeted/tags) and notable
+changes are reported in a
+[changelog](https://github.com/kkholst/targeted/blob/main/NEWS.md).
+
+# I Have a Question / I Want to Report a Bug
+
+If you want to ask questions, require help or clarification, or report a
+bug, we recommend to either contact a maintainer directly or the
+following:
+
+- Open an [Issue](https://github.com/kkholst/targeted/issues).
+- Provide as much context as you can about what you’re running into.
+- Provide project and platform versions, depending on what seems
+  relevant.
+
+We will then take care of the issue as soon as possible.
