--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -1,11 +1,18 @@
+---
+title: "`targeted`: Targeted Learning in R"
+output:
+  html_document:
+    toc: true
+    toc_depth: 2
+---
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-
 
 ```{r  include=FALSE }
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
+  cache = FALSE,
   out.width = "50%"
 )
 ```
@@ -19,7 +26,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-# Targeted Learning in R: `targeted` <a href="https://kkholst.github.io/targeted"><img src="man/figures/logo.svg" align="right" height="75" /></a>
+# Targeted Learning in R: `targeted` <a href="https://kkholst.github.io/targeted"><img src="man/figures/logohex.svg" align="right" height="150" /></a>
 
 Various methods for targeted learning and semiparametric inference including
 augmented inverse probability weighted (AIPW) estimators for missing data and
@@ -46,6 +53,16 @@ And the development version from [GitHub](<https://github.com/kkholst/targeted>)
 remotes::install_github("kkholst/targeted", ref="dev")
 ```
 
+Computations such as cross-validation are parallelized via the `{future}`
+package. To enable parallel computations and progress-bars the following code
+can be executed
+```{r future, eval=FALSE}
+future::plan("multisession")
+progressr::handlers(global=TRUE)
+```
+
+
+
 # Examples
 
 To illustrate some of the functionality of the `targeted` package we simulate
@@ -53,21 +70,25 @@ some data from the following model
 $$Y = \cos(W_1) + A + W_2 A + 0.2 W_2^2 + \epsilon$$
 with independent measurement error $\epsilon\sim\mathcal{N}(0,1)$, and
 with treatment variable $A \sim Bernoulli(\operatorname{expit}\{-1+W_1\})$ and
-independent covariates $W_1, W_2\sim\mathcal{N}(0,1)$.
+independent covariates $W_1, W_2\sim\mathcal{N}(0,1/2)$.
 ```{r simdata}
+library("targeted")
+
 simdata <- function(n, ...) {
    w1 <- rnorm(n) # covariates
    w2 <- rnorm(n)
    a <- rbinom(n, 1, plogis(-1 + w1)) # treatment
-   y <- cos(w1) + w2*a + 0.2*w2^2 + a + rnorm(n) # continuous response
+   y <-  3 * exp(- (w1-1)**2 - (w2+1)**2) + # continuous
+     - 3 * exp(- w1**2 - w2**2) * a +
+     rnorm(n, sd=0.5**2)
    data.frame(y, a, w1, w2)
 }
-d <- simdata(1000)
+d <- simdata(5e3)
 
 head(d)
 ```
 
-## Prediction models
+## Nuisance (prediction) models
 
 Methods for targeted and semiparametric inference rely on fitting nuisance
 models to observed data when estimating the target parameter of interest. The
@@ -75,11 +96,83 @@ models to observed data when estimating the target parameter of interest. The
 `learner` to harmonize common statistical and machine learning models for the
 usage as nuisance models across the various implemented estimators, such as the
 `targeted:cate` function. Commonly used models are constructed as `learner`
-class objects through the `learner_` functions.
+class objects through the `learner_*` functions.
+
+
+As an example, we can specify a linear regression model with main effects of
+$W_1$ and $W_2$
+```{r learner1}
+lr <- learner_glm(y ~ w1 + w2, family = gaussian)
+lr
+```
+
+To fit the model to the data we use the `estimate` method
+```{r lrest}
+lr$estimate(d)
+lr$fit
+```
+
+Predictions, $E(Y\mid W_1, W_2)$, can be performed with the `predict` method
+```{r lrpred}
+head(d) |> lr$predict()
+```
+
+Similarly, a flexible gradient boosting model can be specified with
+```{r lrxgb}
+lr2 <- learner_xgboost(
+  y ~ w1 + w2,
+  early_stopping_rounds = 5,
+  eta = 0.2,
+  nrounds = 100
+)
+```
+
+Lists of models can also be constructed for different hyperparameters with the
+`learner_expand_grid` function.
+
+### Cross-validation
+
+To assess the model generalization error we can perform $k$-fold cross-validation with the `cv` method
+  method
+```{r lrcv}
+mod <- list(glm = lr, xgb = lr2)
+cv(mod, data = d, rep = 2, nfolds = 5) |> summary()
+```
+
+
+### Ensembles (Super-Learner)
+
+An ensemble learner (super-learner) can easily be constructed from lists of `learner` objects
+```{r lrsl}
+sl <- learner_sl(mod, nfolds = 10)
+sl$estimate(d)
+sl
+```
+
+
+```{r lrsl_plot}
+wnew <- seq(-3,3, length.out=200)
+dnew <- expand.grid(w1 = wnew, w2 = wnew, a = 1)
+pr <- matrix(sl$predict(dnew), ncol=length(wnew))
+image(wnew, wnew, pr, col=viridisLite::viridis(64),
+      main=expression(paste("E(Y|",W[1],",",W[2],")")),
+      xlab=expression(W[1]), ylab=expression(W[2]))
+```
 
 
 
-##
+## Average Treatment Effects
+
+
+
+
+```{r ate}
+
+```
+
+
+
+
 
 
 ## Risk regression with binary exposure and nuisance model for the odds-product regression
@@ -93,15 +186,15 @@ library(targeted)
 Simulate some data:
 
 ```{r   }
-m <- lvm() |>
-    regression(a ~ x+z) |>
-    regression(lp.target ~ 1) |>
-    regression(lp.nuisance ~ x + z) |>
-    distribution('a', binomial.lvm("logit")) |>
-    binomial.rr('y', 'a', 'lp.target', 'lp.nuisance')
+m <- lava::lvm() |>
+    lava::regression(a ~ x+z) |>
+    lava::regression(lp.target ~ 1) |>
+    lava::regression(lp.nuisance ~ x + z) |>
+    lava::distribution('a', binomial.lvm("logit")) |>
+    lava::binomial.rr('y', 'a', 'lp.target', 'lp.nuisance')
 
 par <- c('a'=-2, 'lp.target'=1, 'lp.nuisance'=-1, 'lp.nuisance~x'=2)
-d <- lava::sim(m, n=1e4, seed=1, p=par) |>
+d <- lava::sim(m, n=2e4, seed=1, p=par) |>
     subset(select=c('y', 'a','x','z'))
 
 head(d)
@@ -160,8 +253,8 @@ We use the `dev` branch for development and the `main` branch for stable
 releases, which currently follow a frequency of about 4 weeks. All
 releases follow [semantic versioning](https://semver.org/), are
 [tagged](https://github.com/kkholst/targeted/tags) and notable
-changes are reported in a
-[changelog](https://github.com/kkholst/targeted/blob/main/NEWS.md).
+changes are reported in
+[NEWS.md](https://github.com/kkholst/targeted/blob/main/NEWS.md).
 
 # I Have a Question / I Want to Report a Bug
 
@@ -175,3 +268,10 @@ following:
   relevant.
 
 We will then take care of the issue as soon as possible.
+
+
+# Contributing to `targeted`
+
+All types of contributions are encouraged and valued. See the
+[CONTRIBUTING.md](https://github.com/kkholst/targeted/blob/main/CONTRIBUTING.md)
+for details about how to contribute code to this project.
