--- a/vignettes/predictionclass.Rmd
+++ b/vignettes/predictionclass.Rmd
@@ -112,14 +112,16 @@ can be used to pass additional arguments to the fit function. However, in most
 situations this is rarely required.
 
 It is often necessary to consider a range of models with different
-hyper-parmeters and to faciliate this we can use the `learner_expand_grid` function
-```{r learner_expand_grid}
-lrs <- learner_expand_grid(
-  learner_xgboost,
-  list(formula = Sepal.Length ~ ., eta = c(0.2, 0.5, 0.3))
-)
-lrs
+hyper-parameters and to facilitate this we can use the `learner_expand_grid`
+function
+```{r learner_expand_grid} lrs <- learner_expand_grid( learner_xgboost,
+list(formula = Sepal.Length ~ ., eta = c(0.2, 0.5, 0.3)) ) lrs
 ```
+
+The list of
+models can then serve as inputs for `predictor_sl` or for assessing the
+generalization error of the model across different hyper-parameters with the
+`cv` method.
 
 # Usage
 
@@ -201,11 +203,6 @@ lrs <- list(
  # 2 times repeated 5-fold cross-validation
 cv(lrs, data = pbc, rep = 2, nfolds = 5)
 ```
-
-## Specials (advanced topic)
-
-
-TODO: example with offset
 
 # Defining new learners
 
@@ -301,8 +298,6 @@ dsgn <- lr$design(pbc)
 can be used to inspect the design object. The `x` and `y` attributes of the
 returned `design` object are then passed on to the fit function.
 
-TODO: specials should be explained here
-
 ## Fit function with single data argument
 
 To support ensemble/meta learners, it is also possible to construct a learner
@@ -327,3 +322,30 @@ lr
 In this case, all arguments provided to `lr$estimate` are joined together with
 the specified `estimate.args` and passed on to the defined estimate function (i.e.
 `superlearner`).
+
+## Specials in formula
+
+Certain learner functions allow for specifying special terms in the formula. As
+an example we consider the aggregated data-set where we consider only the
+response variable, treatment, and sex.
+
+```{r naivebayes_aggregate_data}
+library("data.table")
+dd <- data.table(pbc)[!is.na(trt), .(.N), by=.(y,trt,sex)]
+print(dd)
+```
+
+Here we fit a Naive Bayes classifier using the `weights` special term to specify
+the frequency weights to be used in the estimation
+```{r naivevbayes}
+lr <- learner_naivebayes(y ~ trt + sex + weights(N))
+lr$estimate(dd)
+lr$predict(dd)
+```
+
+Here `weights.numeric` is simply the identity function
+```{r}
+targeted:::weights.numeric
+```
+
+To illustrate how to define a custom learner with
