--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -65,11 +65,8 @@ progressr::handlers(global=TRUE)
 
 To illustrate some of the functionality of the `targeted` package we simulate
 some data from the following model
-$$Y = \exp\{-(W_1 - 1)^2 - (W_2 - 1)^2)\} -
-2\exp\{-(W_1+1)^2 - (W_2+1)^2\}A +
-\epsilon$$
-with independent measurement error $\epsilon\sim\mathcal{N}(0,1)$, and
-with treatment variable $A \sim Bernoulli(\text{expit}\{-1+W_1\})$ and
+$$Y = \exp\{-(W_1 - 1)^2 - (W_2 - 1)^2)\} - 2\exp\{-(W_1+1)^2 - (W_2+1)^2\}A + \epsilon$$
+with independent measurement error $\epsilon\sim\mathcal{N}(0,1)$, treatment variable $A \sim Bernoulli(\text{expit}\{-1+W_1\})$ and
 independent covariates $W_1, W_2\sim\mathcal{N}(0,1/2)$.
 ```{r simdata}
 library("targeted")
@@ -200,22 +197,18 @@ $$E[Y I(A=a)/P(A=a|W)] = E[Y(a)].$$
 This suggests estimators based on outcome regression ($g$-computation) or
 inverse probability weighting. More generally, under the above assumption we can
 constructor a *one-step* estimator from the *Efficient Influence Function*
-combining these two
-$$
-E\left[\frac{I(A=a)}{\Pi_a(W)}(Y-Q(W,A)) + Q(W,a)\right].
-$$
-In practice, this requires plugin estimates of both the outcome model, $Q(W,A) :=
-E(Y\mid A, W)$, and of the treatment propensity model $\Pi_a(W) := P(A=a\mid
-W)$. The corresponding estimator is consistent even if just one of the two
-nuisance models is correctly specified.
+combining these two $$ E\left[\frac{I(A=a)}{\Pi_a(W)}(Y-Q(W,A)) + Q(W,a)\right].$$\
+In practice, this requires plugin estimates of both the outcome model,
+$Q(W,A) := E(Y\mid A, W)$, and of the treatment propensity model
+$\Pi_a(W) := P(A=a\mid W)$. The corresponding estimator is consistent even if just one of the two nuisance models is correctly specified.
 
 First we specify the propensity model
 ```{r propensity}
 prmod <- learner_glm(a ~ w1 + w2, family=binomial)
 ```
 
-We will reuse one of the outcome models from the previous Section, and can now
-use the `cate` function to estimate the treatment effect
+We will reuse one of the outcome models from the previous section, and use the
+`cate` function to estimate the treatment effect
 ```{r ate, cache=TRUE}
 a <- cate(response.model = lr_rf, propensity.model = prmod, data = d, nfolds = 5)
 a
@@ -226,13 +219,12 @@ difference of those, the average treatment effect, given as the term `(Intercept
 Here we use the `nfolds=5` argument to use 5-fold *cross-fitting* to guarantee
 that the estimates converges weakly to a Gaussian distribution even though
 that the estimated influence function based on plugin estimates from the Random
-Forest does not ncessarily lie in a $P$-Donsker class.
+Forest does not necessarily lie in a $P$-Donsker class.
 
 # Project organization
 
 We use the `dev` branch for development and the `main` branch for stable
-releases, which currently follow a frequency of about 4 weeks. All
-releases follow [semantic versioning](https://semver.org/), are
+releases. All releases follow [semantic versioning](https://semver.org/), are
 [tagged](https://github.com/kkholst/targeted/tags) and notable
 changes are reported in
 [NEWS.md](https://github.com/kkholst/targeted/blob/main/NEWS.md).
