--- a/vignettes/predictionclass.Rmd
+++ b/vignettes/predictionclass.Rmd
@@ -47,7 +47,7 @@ This vignette uses the Mayo Clinic Primary Biliary Cholangitis data
 (`?survival::pbc`) to exemplify the usage of the `learner` class objects. Our
 interest lies in the prediction of the composite event of death or transplant
 before 2 years.
-```{r data}
+```{r pbcdata}
 data(pbc, package="survival")
 pbc <- transform(pbc, y = (time < 730) * (status > 0))
 ```
@@ -111,8 +111,19 @@ most relevant parameters of the underlying fit function (`mgcv::gam` in case of
 can be used to pass additional arguments to the fit function. However, in most
 situations this is rarely required.
 
-TODO: here it would be nice to have a utility function to generate a list of
-learners from a parameter grid
+It is often necessary to consider a range of models with different
+hyper-parameters and to facilitate this we can use the `learner_expand_grid`
+function
+```{r learner_expand_grid}
+lrs <- learner_expand_grid( learner_xgboost,
+                            list(formula = Sepal.Length ~ .,
+                                eta = c(0.2, 0.5, 0.3)) )
+lrs
+```
+
+The list of models can then serve as inputs for `predictor_sl` or for assessing
+the generalization error of the model across different hyper-parameters with the
+`cv` method.
 
 # Usage
 
@@ -194,10 +205,6 @@ lrs <- list(
  # 2 times repeated 5-fold cross-validation
 cv(lrs, data = pbc, rep = 2, nfolds = 5)
 ```
-
-## Specials (advanced topic)
-
-TODO: example with offset
 
 # Defining new learners
 
@@ -293,8 +300,6 @@ dsgn <- lr$design(pbc)
 can be used to inspect the design object. The `x` and `y` attributes of the
 returned `design` object are then passed on to the fit function.
 
-TODO: specials should be explained here
-
 ## Fit function with single data argument
 
 To support ensemble/meta learners, it is also possible to construct a learner
@@ -319,3 +324,62 @@ lr
 In this case, all arguments provided to `lr$estimate` are joined together with
 the specified `estimate.args` and passed on to the defined estimate function (i.e.
 `superlearner`).
+
+## Specials in formula
+
+Certain learner functions allow for specifying special terms in the formula. For
+example, let’s consider an aggregated dataset that includes only the response
+variable, treatment, and sex:
+```{r naivebayes_aggregate_data}
+library("data.table")
+dd <- data.table(pbc)[!is.na(trt), .(.N), by=.(y,trt,sex)]
+print(dd)
+```
+
+Next, we fit a Naive Bayes classifier using the `weights` special term to specify
+the frequency weights for the estimation
+```{r naivevbayes}
+lr <- learner_naivebayes(y ~ trt + sex + weights(N))
+lr$estimate(dd)
+lr$predict(dd)
+```
+
+Here `weights.numeric` is simply the identity function
+```{r}
+targeted:::weights.numeric
+```
+
+To illustrate how to define a custom learner that utilizes special
+terms, consider the following example where we introduce a `strata` term. In
+this case, we introduce an estimation method that fits a linear regression model for each
+value of the strata variable, as well as a corresponding prediction method
+```{r eststrata}
+est <- function(formula, data, strata, ...)
+  lapply(levels(strata), \(s) lm(formula, data[which(strata==s),]))
+
+pred <- function(object, newdata, strata, ...) {
+  res <- numeric(length(strata))
+  for (i in seq_along(levels(strata))) {
+    idx <- which(strata == levels(strata)[i])
+    res[idx] <- predict(object[[i]], newdata[idx, ], ...)
+  }
+  return(res)
+}
+```
+
+The new learner is now defined by including the argument `specials
+= "strata", which ensures that the strata variable is correctly passed to both
+the estimate and predict functions
+```{r lr_strata}
+lr <- learner$new(y ~ sex + strata(trt),
+                  estimate=est, predict=pred, specials = "strata")
+des <- lr$design(head(pbc))
+des
+des$strata
+```
+
+```{r lr_strata_est}
+lr$estimate(pbc)
+lr
+lr$predict(head(pbc))
+```
